metadata/force-app/main/default/objects/CustomName_CbWbu__c/CustomName_CbWbu__c.object-meta.xml
<CustomObject>
    <description>Description_XSsfF</description>
    <label>CustomLabel_Xyomj</label>
    <nameField>
        <label>CustomLabel_Xyomj</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Xyomjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>