metadata/force-app/main/default/objects/CustomName_CbWbu__c/fields/CustomField_AhGOn__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AhGOn__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvorLQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>