metadata/force-app/main/default/objects/CustomName_CbWbu__c/fields/CustomField_cmSgl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cmSgl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRQvvx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>