metadata/force-app/main/default/objects/CustomName_CbWbu__c/fields/CustomField_esRkH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_esRkH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldKunRj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>